# subscribed_calendar_rs

./: Cargo.toml  Rocket.toml  buildAndStart.sh  pi_start.sh
data/: basicauth.ics
src/: main.rs
