[package]
name = "subscribed_calendar_rs"
version = "0.1.0"
authors = ["Ephraim Kunz <ephraimkunz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
codegen-units = 1

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3
